ux improvements, add alternatives questions

--- a/src/Lily/KnowledgeBundle/Resources/views/index.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/index.html.twig
@@ -89,8 +89,11 @@
 		<script type="text/template" id="questionsEditTpl">
       {% include 'LilyKnowledgeBundle:Questions/Edit:skeleton.html.twig' %}
     </script>
-		<script type="text/template" id="questionsEditTreeTpl">
-      {% include 'LilyKnowledgeBundle:Questions/Edit:tree.html.twig' %}
+		<script type="text/template" id="questionsEditAnswerTpl">
+      {% include 'LilyKnowledgeBundle:Questions/Edit:answer.html.twig' %}
+    </script>
+		<script type="text/template" id="questionsEditAlternativeTpl">
+      {% include 'LilyKnowledgeBundle:Questions/Edit:alternative.html.twig' %}
     </script>
 		<!-- 
   		Categories
