--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/chat.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/chat.html.twig
@@ -8,7 +8,7 @@
 		<section class="lily-avatar-wrapper">
 			<div id="chat-box-messages" class="chat-messages scrollable">
 			<!-- Here goes the bubbles-->
-			  <div class="lily-msg-chat-operator lily-cst-msg-chat-operator lily-msg-chat-wait">
+			  <div class="lily-msg-chat-wait">
 			    <p>Bonjour. Veuillez poser votre question, un opérateur va y répondre.</p>
 			  </div>
 			</div>
