--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/mail.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/mail.html.twig
@@ -7,7 +7,7 @@
 		<input id="object" class="lily-cst-form-color" type="text" name="object" placeholder="L'objet de votre demande" size="30"/>
 		<p class="lily-contact-form-label">Message <label class="msg" style="display:none">Ce champ ne peut pas être vide.</label></p>
 		<textarea id="msg" class="lily-cst-form-color" type="text" name="msg" placeholder="Votre message" size="30"/>
-		<button class="lily-btn-submit-color">Envoyer</button>
+		<button class="lily-btn-submit-color">Envoyer ma demande</button>
 	  </div>
 	</section>
 </div>
