--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/message_redirection.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/message_redirection.html.twig
@@ -1,25 +1,25 @@
 <ul>
 <% if (config.hasTel) { %>
-	<i class="lily-redirection-mail">
+	<i class="lily-redirection-item lily-redirection-mail">
 		<a href="#/mail"><%= copy.mail %>
-			<span class="lily-icon lily-icon-mail"></span>
+			<span class="lily-icon lily-icon-arrow-right"></span>
 		</a>
 	</i>
 <% } %>
 
 <% if (config.hasMail)  { %>
-	<i class="lily-redirection-tel">
+	<i class="lily-redirection-item lily-redirection-tel">
 		<a href="tel:<%= redirections.tel %>">	<%= copy.tel %>
-			<span class="lily-icon lily-icon-phone"></span>
+			<span class="lily-icon lily-icon-arrow-right"></span>
 		</a>
 	</i>
 <% } %>
 
 <% if (config.hasChat && config.chatAvailable)  { %>
-	<i class="lily-redirection-chat">
+	<i class="lily-redirection-item lily-redirection-chat">
 		<a href="#/chat">
 			<%= copy.chat %>
-			<span class="lily-icon lily-icon-chat"></span>
+			<span class="lily-icon lily-icon-arrow-right"></span>
 		</a>
 	</i>
 <% } %>
