--- a/src/Lily/KnowledgeBundle/Resources/views/Questions/Edit/skeleton.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Questions/Edit/skeleton.html.twig
@@ -14,6 +14,7 @@
   </div>
   <div id="alternatives-edit" class="js-alternatives tab-pane wrapper scrollable stretch">
     <p class="alternative-help">
+      <i class="icon-question-sign"></i>
       Une question alternative est une formulation différente de la question qui permet d'améliorer le matching et le comportement de la solution.
     </p>
     <ul class="js-alternatives-list scrollable">
