--- a/src/Lily/KnowledgeBundle/Resources/views/Questions/skeleton.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Questions/skeleton.html.twig
@@ -198,7 +198,7 @@
     <aside class="js-skeleton-list">
       <section class="vbox">
         <section class="scrollable">
-          <ul class="js-questions-list list-group list-group-alt no-radius">
+          <ul class="js-questions-list list-group no-radius">
           <!--
         	  Our sorted questions list
           -->
