--- a/src/Lily/KnowledgeBundle/Resources/views/Categories/category.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Categories/category.html.twig
@@ -3,15 +3,9 @@
 	  <i class="icon-collapse"></i>
   </span>
   <ul class="dropdown-menu">
-		<li>
-		  <a class="btn-add-child" href="#">Ajouter un enfant</a>
-		</li>
-		<li>
-		  <a class="btn-update" href="#">Modifier</a>
-		</li>
-		<li>
-		  <a class="btn-remove" href="#">Supprimer</a>
-		</li>
+		<li><a class="btn-add-child" href="#">Ajouter un enfant</a></li>
+		<li><a class="btn-update" href="#">Modifier</a></li>
+		<li><a class="btn-remove" href="#">Supprimer</a></li>
 	</ul>
 <% } %>
 
